force-app/main/default/objects/FieldProjection__c/FieldProjection__c.object-meta.xml
<CustomObject>
    <label>Field Projection</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Field Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Projections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>