force-app/main/default/objects/FieldProjection__c/fields/LineItemDefinition__c.field-meta.xml
<CustomField>
    <fullName>LineItemDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Item Definition</label>
    <referenceTo>LineItemDefinition__c</referenceTo>
    <relationshipLabel>Field Projections</relationshipLabel>
    <relationshipName>FieldProjections</relationshipName>
    <type>Lookup</type>
</CustomField>