force-app/main/default/objects/FieldProjection__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
                <default>true</default>
                <label>Header</label>
            </value>
            <value>
                <fullName>LineItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>